Fix format and static code analysis recommendations